--- a/src/projects/dnd/dmView/style/App.css
+++ b/src/projects/dnd/dmView/style/App.css
@@ -844,7 +844,7 @@ hr {
 
 .encounterCreaturesNoItemsContainer {
     margin-top: 25%;
-    border: 1px solid #ccc;
+    height: 100%;
     position: relative;
     display: flex;
     flex-direction: column;
@@ -852,11 +852,13 @@ hr {
 }
 
 .encounterCreaturesNoItems {
-    display: contents;
-    padding-top: 5%;
-    border-bottom: 1px solid #ccc;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 3%;
     color: rgb(0, 0, 0);
-    transition: background-color 0.2s ease;
+    border: 3px solid #711d1d;
+
 }
 
 .submitButton {
@@ -1102,11 +1104,6 @@ input {
     margin: 3px;
 }
 
-.statBlock:hover .statblockEdit,
-.statBlock:hover .statblockX {
-    visibility: visible;
-}
-
 .textShadow {
     text-shadow: -.5px .5px 0px #000000;
 }
@@ -1166,12 +1163,29 @@ input {
 
 .statblockEdit,
 .statblockX {
-    background-color: rgb(186, 186, 186);
     cursor: pointer;
     visibility: hidden;
     z-index: 1;
-    margin: 3px;
+    margin: 0px 3px 3px 3px;
     text-wrap: nowrap;
+    padding: 3px;
+    border: 1px solid #575757;
+    border-radius: 4px;
+}
+
+.statBlock:hover .statblockEdit,
+.statBlock:hover .statblockX {
+    visibility: visible;
+}
+
+.statblockEdit:hover,
+.statblockX:hover {
+    background-color: rgb(225, 225, 225);
+}
+
+.statBlockTopButtons {
+    display: flex;
+    justify-content: center;
 }
 
 .editBlock {
@@ -1388,8 +1402,11 @@ input {
 }
 
 .dummyButtons {
-    position: relative;
-    width: 94%;
+    display: flex;
+    flex-direction: column;
+    height: 3%;
+    width: 100%;
+    justify-content: flex-end;
 }
 
 .dmViewButtonContainer .dropdown {
