spacing click item bug with dnd_b

--- a/src/projects/dnd/dmView/style/App.css
+++ b/src/projects/dnd/dmView/style/App.css
@@ -754,6 +754,7 @@ hr {
     justify-content: space-around;
     align-items: center;
     width: 100%;
+    overflow-y: auto;
 }
 
 .optionColumn {
