--- a/src/projects/dnd/dmView/style/App.css
+++ b/src/projects/dnd/dmView/style/App.css
@@ -754,6 +754,15 @@ hr {
     justify-content: space-around;
     align-items: center;
     width: 100%;
+}
+
+.userContainer {
+    margin-top: 40px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: center;
+    width: 100%;
     overflow-y: auto;
 }
 
@@ -1287,11 +1296,12 @@ input {
     position: absolute; /* Position absolutely to fill the container */
     top: 50%; /* Center image vertically */
     left: 50%; /* Center image horizontally */
+    transform: translate(-50%, -50%); /* Offset to center the image */
+
     width: 100%;
     height: 100%;
-    object-fit: cover; /* Cover the container, stretching if necessary */
+    object-fit: fill; /* Cover the container, stretching if necessary */
     object-position: center; /* Center the image */
-    transform: translate(-50%, -50%); /* Offset to center the image */
     opacity: .3;
     border-radius: 8px;
 }
