--- a/src/projects/dnd/dmView/style/App.css
+++ b/src/projects/dnd/dmView/style/App.css
@@ -388,6 +388,8 @@ hr {
     z-index: 2;
     max-height: 70vh;
     overflow-y: scroll;
+    font-family: Bitter, serif;
+
 }
 
 .effectsBarContainer {
