--- a/src/projects/dnd/dmView/style/App.css
+++ b/src/projects/dnd/dmView/style/App.css
@@ -438,21 +438,12 @@ hr {
 }
 
 .tooltiptext {
-    visibility: hidden;
     background-color: rgb(71, 71, 71);
     color: white;
-    text-align: center;
     padding: 5px;
     border-radius: 5px;
-    position: absolute;
-    bottom: 55%; 
-    left: 50%;
-    transform: translateX(-50%); 
-    opacity: 1;
-    transition: opacity 0.3s;
     z-index: 99;
     font-family: 'Bitter', serif;
-    width: fit-content;
 }
 
 .roundNum {
@@ -1406,6 +1397,30 @@ input {
     cursor: pointer;
 }
 
+.widgetPopupTrigger {
+    all: unset;
+    cursor: pointer;
+    width: 100%;
+    height: 100%;
+}
+
+.widgetPopover {
+    border-radius: 5px;
+    border: 1px solid #000000;
+    background-color: #e0d9b7;
+    box-shadow: 1px 1px 10px #000000;
+    padding: 5px 5px 5px 5px;
+}
+
+.hpPopover {
+    width: 100px;
+}
+
+.hpButtonTrigger {
+    min-width: 60px;
+    max-width: 65px;
+}
+
 .triggerButton:hover {
     text-decoration: underline;
 }
@@ -1685,6 +1700,8 @@ input {
 }
 
 .magWrapper {
+    display: flex;
+    flex-direction: column;
     border: 1px solid #ccc;
     border-left: 0;
     background-color: #f9f9f9;
@@ -1741,6 +1758,7 @@ input {
 }
 
 .listItemOptions {
+    align-items: baseline;
     box-shadow: none;
     display: grid;
     grid-template-columns: repeat(2, 1fr); /* 2 columns */
@@ -1971,41 +1989,26 @@ input {
     width: 100%;
 }
 
-.editStatsContainer {
-    position: fixed;
-    border-radius: 5px;
-    border: 1px solid #000000;
-    background-color: #e0d9b7;
-    box-shadow: 1px 1px 10px #000000;
-    width: 6%;
-    z-index: 9999;
-    padding: 0px 5px 5px 5px;
-}
+
 
 .editTeamContainer {
     display: flex;
     flex-direction: column;
-    position: fixed;
-    border-radius: 10px;
-    border: 1px solid #000000;
-    background-color: #e0d9b7;
-    box-shadow: 1px 1px 10px #000000;
-    width: fit-content;
-    z-index: 9999;
-    padding: 5px;
-    align-items: center
+    align-items: center;
 }
+
+
 
 .effectContainerFlag {
     position: absolute;
     transform: rotate(45deg);
-    bottom: calc(0% - 6.5px);
-    right:  calc(28%);
-    background-color: inherit;
-    height: 9px;
-    width: 9px;
-    border-bottom: inherit;
-    border-right: inherit;
+    background-color: #e0d9b7;
+    left: calc(96.5%);
+    bottom: calc(100% - 3px);
+    height: 8px;
+    width: 8px;
+    border-left: 1px solid black;
+    border-top: 1px solid black;
 }
 
 .hpContainerFlag {
@@ -2013,31 +2016,23 @@ input {
     transform: rotate(45deg);
     bottom: 20%;
     left:  calc(100% - 8px);
-    background-color: inherit;
+    background-color: #e0d9b7;
     height: 16px;
     width: 16px;
-    border-top: inherit;
-    border-right: inherit;
+    border-right: 1px solid black;
+    border-top: 1px solid black;
 }
 
 .teamContainerFlag {
     position: absolute;
     transform: rotate(45deg);
-    bottom: calc(0% - 6.5px);
-    right:  calc(47.5%);
-    background-color: inherit;
+    background-color: #e0d9b7;
+    left: calc(93%);
+    bottom: calc(100% - 3px);
     height: 8px;
     width: 8px;
-    border-right: inherit;
-    border-bottom: inherit;
-}
-
-.hpChanges {
-    width: 100%;
-    height: 100%;
-    display: flex;
-    flex-direction: column;
-    align-items: baseline
+    border-left: 1px solid black;
+    border-top: 1px solid black;
 }
 
 .teamChoices {
@@ -2054,14 +2049,6 @@ input {
     flex-direction: column;
     align-items: center;
     width: 100%;
-    height: 50%;
-}
-
-.extraHpContainer {
-    position: relative;
-    display: flex;
-    flex-direction: column;
-    width: 100%;   
     height: 50%;
 }
 
@@ -2205,6 +2192,7 @@ input {
 .encounterCreaturesHpContainer {
     position: relative;
     width: 100%;
+    height: 100%;
     min-width: 60px;
     max-width: 65px;
     text-align: center;
@@ -2337,12 +2325,9 @@ input {
 }
 
 .flagpole-container {
-    position: relative;
     background-color: white;
     border-radius: 10px;
     overflow: hidden;
-    width: 80%;
-    height: 70%;
 }
 
 .listItemOptionsBottom {
@@ -2355,7 +2340,7 @@ input {
     left: 6%;
     top: 2px;
     width: 1px; 
-    height: 15px;
+    height: 13px;
     background-color: rgb(241, 236, 79);
     border: solid 2px rgb(92, 92, 92);
     border-top-right-radius: 2px;
