--- a/src/projects/dnd/dmView/style/App.css
+++ b/src/projects/dnd/dmView/style/App.css
@@ -1673,6 +1673,8 @@ input {
     margin: 0;
     z-index: 2;
     width: fit-content;
+    max-height: 50vh;
+    overflow-y: scroll;
 }
 
 /* Dropdown menu items */
